<resources>
    <string name="app_name">Yala</string>
    <string name="title_activity_referencia">ReferenciaActivity</string>
    <string name="hint_username">Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="login">Ingresar</string>
    <string name="createAccount_01">¿Necesitas una cuenta? </string>
    <string name="createAccount_02"> Crea una aquí.</string>
    <string name="hint_location">Ubicación</string>
    <string name="hint_phoneNumber">Teléfono</string>
    <string name="signUp">REGISTRARSE</string>
    <string name="toolbar_title_createAccount">CREAR CUENTA</string>
    <string name="profile_tab">Perfil</string>
    <string name="collection_tab">Mi Colección</string>
    <string name="search_tab">Buscar figuritas</string>
    <string name="signUpTitle">CREAR CUENTA</string>
    <string name="edit">Editar</string>
    <string name="total">Total:</string>
    <string name="Completadas">Completadas:</string>
    <string name="Repetidas">Repetidas:</string>
    <string name="Coleccion_toolbar_title">MI COLECCIÓN</string>
    <string name="Buscar_Figuritas_toolbar_title">BUSCA FIGURITAS</string>
    <string name="Añadir_album_toolbar_title">AÑADIR ÁLBUM</string>
    <string name="hint_nameAlbum">Nombre</string>
    <string name="hint_editorial">Editorial o marca</string>
    <string name="hint_cantidad">Cantidad</string>
    <string name="solicitar">Solicitar</string>
    <string name="hint_num_figurita">Número de figuritas</string>
    <string name="logOut">Cerrar Sesión</string>
    <string name="verRepetidas">Repetidas</string>
    <string name="stats_tab">Estadísticas</string>
    <string name="host_name">https://juanhb.000webhostapp.com</string>
</resources>

