<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SearchFragment"
    android:background="@color/background">

    <include layout="@layout/actionbar_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/height_toolbar"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/colorPrimary"
            android:layout_weight="0.75">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="7dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="@dimen/padding_izquierda"
                        android:gravity="center_vertical"
                        android:fontFamily="@font/didact_gothic"
                        android:textSize="16sp"
                        android:text="Álbum:"/>
                    <Spinner
                        android:id="@+id/spinner_albums"
                        android:layout_width="200dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:background="@color/colorPrimary">
                    </Spinner>
                    <Button
                        android:id="@+id/btnSearch"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="Buscar"
                        android:theme="@style/RaisedButtonDark"/>
                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:theme="@style/EditTextWhite">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/numberFigure"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_num_figurita" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/usersRecycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>