...
            <android.support.design.widget.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:theme="@style/EditTextWhite">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_username" />

            </android.support.design.widget.TextInputLayout>

...
            <android.support.design.widget.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:theme="@style/EditTextWhite">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/hint_password" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/marginTop"
            android:gravity="center">
            <Button
                android:id="@+id/login_btn"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:background="@drawable/boton_redondo"
                android:theme="@style/RaisedButtonDark"
                android:text="@string/login" />
        </LinearLayout>
...
